[package]
name = "streamshare"
version = "4.0.0"
edition = "2021"
description = "Upload to streamshare library"
license = "MIT"
homepage = "https://waradu.dev"
repository = "https://github.com/Waradu/streamshare"
readme = "README.md"
authors = ["Waradu"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"